6 files modified, 6 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -7,6 +7,11 @@
       {{product.name}}
     </a>
 	</h3>
+
+  <p>
+  Double Price custom:{{product.price | divideby |currency:'INR'}}
+  </p>
+
 	<p *ngIf="product.description">
 		Description: {{product.description}}
 	</p>
