--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,6 +1,7 @@
 <h2>Product Details</h2>
 <div>
-	<h3> Product Name: {{ product.name }} </h3>
-	<h4> Product Price: {{ product.price | currency }} </h4>
+	<h3> Product Name: {{ product.name | uppercase}} </h3>
+	<h4> Product Price: {{ product.price | currency:'INR' }} </h4>
 	<p *ngIf="product.description"> Description: {{ product.description }} </p>
+  <button (click)="addToCart(product)">Add to Cart</button>
 </div>
