--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,16 @@
 <a [routerLink]="['/']">
   <h1>My Store</h1>
 </a>
-
-<a class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
+<div [style]="'color:white'">
+  Todays Date:{{date | date:format() | uppercase}}
+</div>
+<button [style]="'background-color:blue'" (click)="toggleFormat()">
+  Toggle
+</button>
+<a [routerLink]="['/cart']" class="button fancy-button">
+    <i class="material-icons">shopping_cart</i>
+    Checkout
+ </a>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
