--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <h3>Cart Page </h3>
 
-<div *ngFor= "let item of items">
+<div class="item" *ngFor= "let item of items">
   <span>
     {{ item.name }}
   </span>
