--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -1,10 +1,7 @@
-<h3>Shipping Prices Page </h3>
+<h3>Available Shipping Prices</h3>
 
-<div  *ngFor= "let costs of shippingCosts | async">
-  <span>
-    {{ costs.type }}
-  </span>
-  <span>
-    {{ costs.price }}
-  </span>
+<div class="shippingCosts" *ngFor ="let shipping of shippingCosts | async">
+  <span>{{ shipping.type }}</span>
+  <span>{{ shipping.price | currency: 'INR' }}</span>
 </div>
+
