--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -21,5 +21,5 @@
       <input type="password" formControlName="password" class="form-control" />
     </div>
   </div>
-  <button (click)="addToCart(product)">submit</button>
+  <button (click)="register(user)">submit</button>
 </div>
