--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,17 @@
 <div class="card">
-  <h4 class="card-header">Login</h4>
-  <div class="card-body">
-    <label for="username">Username</label>
-    <input type="text" class="form-control" />
-    <label for="password">Password</label>
-    <input type="password" class="form-control" />
-    <br />
-    <button [disabled]="loading" class="btn btn-primary">
-      <span
-        *ngIf="loading"
-        class="spinner-border spinner-border-sm mr-1"
-      ></span>
+	<h4 class="card-header">Login</h4>
+	<div class="card-body">
+		<label for="username">Username</label>
+		<input type="text" [(ngModel)]="username" class="form-control" />
+		<label for="password">Password</label>
+		<input type="password" [(ngModel)]="password" class="form-control" />
+		<br />
+		<button [disabled]="loading" class="btn btn-primary"
+      (class)="validateUser()">
       Login
     </button>
-    <a [routerLink]="['/register']" class="button fancy-button">
-      Register
-    </a>
-  </div>
+		<a [routerLink]="['/register']" class="button fancy-button">
+			Register
+		</a>
+	</div>
 </div>
