--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
 		<input type="password" [(ngModel)]="password" class="form-control" />
 		<br />
 		<button [disabled]="loading" class="btn btn-primary"
-      (class)="validateUser()"
+      (click)="validateUser()"
       >
       Login
     </button>
